<resources>
    <string name="app_name">Eldar Wallet</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="term_and_conditions">Acepto las <u>Políticas de Privacidad</u> y los <u>Términos y Condiciones</u></string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="remember_password">¿Olvidaste tu usuario o contraseña?</string>
    <string name="user">Usuario</string>
    <string name="yes">Si</string>
    <string name="accept">Aceptar</string>

    <string name="incomplete_input">Completa todos los campos</string>
    <string name="no">No</string>
    <string name="invalid_cred">Usuario o Contraseña incorrectos</string>
    <string name="error_user">Ha ocurrido un error, vuelve a loguearte por favor</string>

    <string name="retry_again">Inténtelo nuevamente</string>
    <string name="terms_error">Tienes que aceptar los términos y condiciones</string>
    <string name="login">Iniciar sesión</string>
    <string name="sign_up">Registrarse</string>
    <string name="email_invalid">El email es inválido</string>
    <string name="error_internet">No estas conectado a internet</string>
    <string name="password">Contraseña</string>
    <string name="username">Nombre de usuario</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="account_created">Su cuenta fue registrada</string>
    <string name="username_already_used">El usuario ya se encuentra registrado</string>
    <string name="home">Inicio</string>
    <string name="generate_qr">Generar QR</string>
    <string name="scan_qr">Escanear QR</string>
    <string name="pay_card">Pagar con tarjeta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_number">Número de Tarjeta</string>
    <string name="owner_name">Nombre del Titular</string>
    <string name="balance">Balance: $0.00</string>
    <string name="add_card">Add Card</string>
    <string name="unknown_error">Error desconocido</string>
</resources>