<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/itemHome"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/ic_tab_home"/>

    <item
        android:id="@+id/itemGenerator"
        android:enabled="true"
        android:icon="@drawable/ic_tab_qr_generator"
        android:title="@string/generate_qr" />

    <item
        android:id="@+id/itemScan"
        android:enabled="true"
        android:icon="@drawable/ic_tab_scan_code"
        android:title="@string/scan_qr"  />

    <item
        android:id="@+id/itemCard"
        android:enabled="true"
        android:title="@string/pay_card"
        android:icon="@drawable/ic_tab_card_pay"/>

</menu>
