<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    android:fitsSystemWindows="true"
    android:overScrollMode="never"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/darkBlue"
        android:fitsSystemWindows="false"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/eldar_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.65" />

        <TextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="50dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/remember_password"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomInputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/user"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomEditTextStyle"
                    android:id="@+id/etUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_user"
                    android:hint="@string/user"
                    android:inputType="textEmailAddress"
                    android:maxLength="35"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomInputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="22dp"
                android:hint="@string/password"
                android:maxLength="10"
                android:padding="0dp"
                android:textCursorDrawable="@drawable/edit_text_cursor_chat"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:expandedHintEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/bluePrimary">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomEditTextStyle"
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="35" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/btnDefaultWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:drawableEnd="@drawable/arrow_forward"
                android:drawableTint="@color/bluePrimary"
                android:drawableTintMode="src_in"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                style="@style/btnOutlined"
                app:rippleColor="@color/bluePrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableTint="@color/white"
                android:drawableTintMode="src_in"
                android:text="@string/sign_up"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>